# Email_agent

./: .gitignore  main.py  pyproject.toml  requirements.txt
app/: graph.py  langfuse.py  models.py  prompt.py  query_expander.py  response_synth_node.py  tools.py  write_update_mail.py
controller/: agent_state.py  query_expand.py
graph/: graph.py
tools/: email.py
utils/: mcp_client.py
