[project]
name = "gmail-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-ollama>=1.1.0",
    "langfuse>=4.12.0",
    "langgraph>=1.2.6",
    "mcp-google-gmail>=0.1.4",
    "pydantic>=2.13.4",
]
